infra/k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: ymonterom22/moderation
        ports:
        - containerPort: 4003

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation-srv
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
