infra/k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: ymonterom22/query
        ports:
        - containerPort: 4004

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query-srv
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004
